<package format="2">

    <name>path_finding</name>
    <version>0.1.0</version>
    <description>
        Takes map representations and generates a path for the robot.
    </description>
    <maintainer email="TODO@gmail.com">TODO</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>

</package>
