<package format="2">

    <name>robot_comms</name>
    <version>0.1.0</version>
    <description>
        Provides interface to robot and serializers for commands.
    </description>
    <maintainer email="TODO@gmail.com">TODO</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>

</package>
