<package format="2">

    <name>vision_pipeline</name>
    <version>0.1.0</version>
    <description>
        Takes images of the simulation terrain and generates a map.
    </description>
    <maintainer email="TODO@gmail.com">TODO</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>

</package>
